# show-me

./: .gitignore  LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt  start_script.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
config/: stability_config.json
src/: test.py
src/show_me/: image_generate.py
src/show_me/image_generation/: image_generate.py  stability_config.py
src/show_me/inky_display/: image_display.py
src/show_me/speech_input/: buttons.py  transcribe.py
src/show_me/web_app/: web_app.py
src/show_me/web_app/templates/: config.html  generate.html
src/web/templates/: index.html
