[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "show_me"
version = "0.0.1"
authors = [
  { name="Joe Burdick", email="joseph.a.burdick@gmail.com" },
]
description = "A tool for taking voice prompts to generate AI images and display them on an E Ink display with a Raspberry Pi."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"blinker==1.7.0",
"certifi==2023.11.17",
"charset-normalizer==3.3.2",
"click==8.1.7",
"colorama==0.4.6",
"Flask==3.0.0",
"grpcio==1.53.0",
"grpcio-tools==1.53.0",
"idna==3.6",
"inky==1.5.0",
"itsdangerous==2.1.2",
"Jinja2==3.1.3",
"MarkupSafe==2.1.3",
"numpy==1.26.3",
"param==2.0.1",
"pillow==10.2.0",
"protobuf==4.21.12",
"python-dotenv==1.0.0",
"requests==2.31.0",
"smbus2==0.4.3",
"spidev==3.6",
"stability-sdk==0.8.5",
"tk==0.1.0",
"urllib3==2.1.0",
"Werkzeug==3.0.1"
]

[project.urls]
Homepage = "https://github.com/joeburdick/show-me"
Issues = "https://github.com/joeburdick/show-me/issues"